# tripple_gem

./: CMakeLists.txt  README.md  tgem.cpp  tgemcell.geo  tgemcell.sif
